force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Country_Key__c.field-meta.xml
<CustomField>
    <fullName>FS_Country_Key__c</fullName>
    <formula>FS_Outlet__r.ShippingCountry</formula>
    <inlineHelpText>LAND1Country Key</inlineHelpText>
    <label>Country Key</label>
    <type>Text</type>
</CustomField>