force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Cup_Sizes__c.field-meta.xml
<CustomField>
    <fullName>FS_Cup_Sizes__c</fullName>
    <label>Cup Sizes</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>