force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Data_Provider__c.field-meta.xml
<CustomField>
    <fullName>FS_Data_Provider__c</fullName>
    <label>Data Provider</label>
    <length>25</length>
    <type>Text</type>
</CustomField>