force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Data_Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Data_Transfer_Date__c</fullName>
    <formula>DATEVALUE(FS_Date_Transfer__c)</formula>
    <label>JDE Last Modified Date</label>
    <type>Date</type>
</CustomField>