force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Date_Installed2__c.field-meta.xml
<CustomField>
    <fullName>FS_Date_Installed2__c</fullName>
    <description>.</description>
    <inlineHelpText>Last Enrollment Date 
[Enter the date format in mm/dd/yyyy]</inlineHelpText>
    <label>MDM latest Enrollment Date</label>
    <type>Date</type>
</CustomField>