force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Date_Installed__c.field-meta.xml
<CustomField>
    <fullName>FS_Date_Installed__c</fullName>
    <formula>Installation__r.FS_Scheduled_Install_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Installed</label>
    <type>Date</type>
</CustomField>