force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Date_Relocated__c.field-meta.xml
<CustomField>
    <fullName>FS_Date_Relocated__c</fullName>
    <label>Date Relocated</label>
    <type>Date</type>
</CustomField>