force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Date_Removed__c.field-meta.xml
<CustomField>
    <fullName>FS_Date_Removed__c</fullName>
    <description>Original field used by FET domestic. Updating the label to Actual removal date</description>
    <inlineHelpText>Last Removal Date 
[Enter the date format in mm/dd/yyyy]</inlineHelpText>
    <label>MDM Deleted Date</label>
    <type>Date</type>
</CustomField>