force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Date_Replaced__c.field-meta.xml
<CustomField>
    <fullName>FS_Date_Replaced__c</fullName>
    <label>Date Replaced</label>
    <type>Date</type>
</CustomField>