force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Date_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_Date_Status__c</fullName>
    <label>MDM Registered Date</label>
    <type>Date</type>
</CustomField>