force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Date_Transfer__c.field-meta.xml
<CustomField>
    <fullName>FS_Date_Transfer__c</fullName>
    <inlineHelpText>TRANS_DATE</inlineHelpText>
    <label>Data Transfer Date</label>
    <type>DateTime</type>
</CustomField>