force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Dispenser_Active_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Dispenser_Active_Date__c</fullName>
    <inlineHelpText>This date represents the date when the OD Record was created/Linked to this Outlet and made Active</inlineHelpText>
    <label>Active Date</label>
    <type>Date</type>
</CustomField>