force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Dispenser_Active_Inactive_date__c.field-meta.xml
<CustomField>
    <fullName>FS_Dispenser_Active_Inactive_date__c</fullName>
    <label>Dispenser Active/Inactive date</label>
    <type>Date</type>
</CustomField>