force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Dispenser_Inactive_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Dispenser_Inactive_Date__c</fullName>
    <inlineHelpText>This date represents the date when the OD Record already linked to this Outlet was made InActive</inlineHelpText>
    <label>Inactive Date</label>
    <type>Date</type>
</CustomField>