force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Dispenser_Location__c.field-meta.xml
<CustomField>
    <fullName>FS_Dispenser_Location__c</fullName>
    <description>this is a location of dispenser</description>
    <label>Dispenser Location</label>
    <length>20</length>
    <type>Text</type>
</CustomField>