force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Dispenser_Type2__c.field-meta.xml
<CustomField>
    <fullName>FS_Dispenser_Type2__c</fullName>
    <inlineHelpText>For International OD&#39;s Dispenser Type value is derived from Dispenser Model.</inlineHelpText>
    <label>Dispenser Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Self Serve</fullName>
            </value>
            <value>
                <fullName>Crew Serve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>