force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Dispenser_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_Dispenser_Type__c</fullName>
    <description>Dispenser Type</description>
    <formula>IF(RecordType.Name=&#39;BoE Dispenser&#39;, TEXT(FS_Model__c), FS_Equip_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dispenser Type</label>
    <type>Text</type>
</CustomField>