force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_DL_Indicator__c.field-meta.xml
<CustomField>
    <fullName>FS_DL_Indicator__c</fullName>
    <label>Daylight Saving indicator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>