force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>FS_Document_Number__c</fullName>
    <label>Document Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>