force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Equip_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_Equip_Sub_Type__c</fullName>
    <label>JDE Equipment Sub Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>