force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Equip_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_Equip_Type__c</fullName>
    <description>equip type</description>
    <inlineHelpText>This is the JDE Equipment Type value</inlineHelpText>
    <label>Equipment Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>