force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_FAV_MIX_Overridden__c.field-meta.xml
<CustomField>
    <fullName>FS_FAV_MIX_Overridden__c</fullName>
    <label>Favorite Mix Overridden</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FET</fullName>
                <default>true</default>
                <label>FET</label>
            </value>
            <value>
                <fullName>NMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>