force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_First_Pour_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_First_Pour_Date__c</fullName>
    <label>First Pour Date</label>
    <type>Date</type>
</CustomField>