force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_First_System_DB__c.field-meta.xml
<CustomField>
    <fullName>FS_First_System_DB__c</fullName>
    <label>First System DB</label>
    <type>Date</type>
</CustomField>