force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Hibernate_State_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Hibernate_State_Date__c</fullName>
    <label>Hibernate State Date</label>
    <type>Date</type>
</CustomField>