force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Hide_Water_Dispenser_New__c.field-meta.xml
<CustomField>
    <fullName>FS_Hide_Water_Dispenser_New__c</fullName>
    <label>showHideWater.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Show</fullName>
            </value>
            <value>
                <fullName>Hide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>