force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_IceType__c.field-meta.xml
<CustomField>
    <fullName>FS_IceType__c</fullName>
    <label>IceType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>