force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Install_Base_Status_Descr__c.field-meta.xml
<CustomField>
    <fullName>FS_Install_Base_Status_Descr__c</fullName>
    <description>Description of Install Base status</description>
    <label>Install Base Status Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>