force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Install_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_Install_Status__c</fullName>
    <label>Install Base Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>