force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_IOT_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>FS_IOT_Unique_ID__c</fullName>
    <description>Airwatch Device ID</description>
    <label>IOT Unique ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>