force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>FS_IP_Address__c</fullName>
    <label>IP Address</label>
    <length>25</length>
    <type>Text</type>
</CustomField>