force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_IP_Captured_On__c.field-meta.xml
<CustomField>
    <fullName>FS_IP_Captured_On__c</fullName>
    <label>IP  Captured On</label>
    <type>Date</type>
</CustomField>