force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Is_Registered_at_Dispenser__c.field-meta.xml
<CustomField>
    <fullName>FS_Is_Registered_at_Dispenser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Was Dispenser Manually Enrolled?</label>
    <type>Checkbox</type>
</CustomField>