force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_IsActive__c.field-meta.xml
<CustomField>
    <fullName>FS_IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>active or inactive</description>
    <label>Active (A) / Inactive (I)</label>
    <type>Checkbox</type>
</CustomField>