force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_IsInstalled__c.field-meta.xml
<CustomField>
    <fullName>FS_IsInstalled__c</fullName>
    <formula>IF( AND( NOT(ISBLANK(TEXT( FS_Date_Installed__c ))),ISBLANK(FS_Date_Relocated__c), ISBLANK(FS_Date_Replaced__c), ISBLANK(FS_Date_Removed__c)),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsInstalled</label>
    <type>Checkbox</type>
</CustomField>