force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_isReviewed__c.field-meta.xml
<CustomField>
    <fullName>FS_isReviewed__c</fullName>
    <label>isReviewed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>