force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_JDE_Ordered_User__c.field-meta.xml
<CustomField>
    <fullName>FS_JDE_Ordered_User__c</fullName>
    <description>JDE User who order it</description>
    <label>JDE Document User</label>
    <length>50</length>
    <type>Text</type>
</CustomField>