force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Last_CDA_Connect_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Last_CDA_Connect_Date__c</fullName>
    <description>Date dispenser last connected to CDA within the last N-day window.  N=90 to help seed the system..</description>
    <label>Last CDA Connect Date</label>
    <type>Date</type>
</CustomField>