force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Last_Pour_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Last_Pour_Date__c</fullName>
    <description>.</description>
    <label>Last Pour Date</label>
    <type>Date</type>
</CustomField>