force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Last_Seen_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Last_Seen_Date__c</fullName>
    <description>Last Seen.</description>
    <label>Last Seen</label>
    <type>Date</type>
</CustomField>