force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Last_Status_Descr__c.field-meta.xml
<CustomField>
    <fullName>FS_Last_Status_Descr__c</fullName>
    <label>Last Status Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>