force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Last_System_DB__c.field-meta.xml
<CustomField>
    <fullName>FS_Last_System_DB__c</fullName>
    <description>.</description>
    <label>Last System DB</label>
    <type>Date</type>
</CustomField>