force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Last_Updated_Date_Time_to_NMS__c.field-meta.xml
<CustomField>
    <fullName>FS_Last_Updated_Date_Time_to_NMS__c</fullName>
    <description>Recent updated Date/time to NMS/Airwatch</description>
    <inlineHelpText>Recent updated Date/time to NMS/Airwatch</inlineHelpText>
    <label>Last Updated DateTime(GMT) to AW</label>
    <type>DateTime</type>
</CustomField>