force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Last_Updated_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Last_Updated_Order_Date__c</fullName>
    <label>Last Updated Document Date</label>
    <type>DateTime</type>
</CustomField>