force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>FS_Line_Number__c</fullName>
    <label>Line Number</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>