force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Line_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_Line_Type__c</fullName>
    <label>Line Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>