force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Linkage_Created__c.field-meta.xml
<CustomField>
    <fullName>FS_Linkage_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Designates which system created the linkage</description>
    <inlineHelpText>Yes, if linkage was created by Device Management System. No, if linkage was created by Asset Management System (JDE).</inlineHelpText>
    <label>Linkage Created</label>
    <type>Checkbox</type>
</CustomField>