force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Loc_Finder_Latitude__c.field-meta.xml
<CustomField>
    <fullName>FS_Loc_Finder_Latitude__c</fullName>
    <label>Loc Finder Latitude</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>