force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Loc_Finder_Reviewed_On__c.field-meta.xml
<CustomField>
    <fullName>FS_Loc_Finder_Reviewed_On__c</fullName>
    <label>Loc Finder Reviewed On</label>
    <type>DateTime</type>
</CustomField>