force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Loc_Finder_ReviewedBy__c.field-meta.xml
<CustomField>
    <fullName>FS_Loc_Finder_ReviewedBy__c</fullName>
    <label>Loc Finder ReviewedBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>