force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Longitude__c.field-meta.xml
<CustomField>
    <fullName>FS_Longitude__c</fullName>
    <description>Longitude..</description>
    <label>Longitude</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>