force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_LTO__c.field-meta.xml
<CustomField>
    <fullName>FS_LTO__c</fullName>
    <description>LTO</description>
    <label>FET Limited Time offer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>