force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Migration_to_AW_Required__c.field-meta.xml
<CustomField>
    <fullName>FS_Migration_to_AW_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Migration to AW Required</label>
    <type>Checkbox</type>
</CustomField>