force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Min_Signal_Strength__c.field-meta.xml
<CustomField>
    <fullName>FS_Min_Signal_Strength__c</fullName>
    <label>Min Signal Strength</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>