force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Model__c.field-meta.xml
<CustomField>
    <fullName>FS_Model__c</fullName>
    <inlineHelpText>For International OD&#39;s Platform value is derived from Dispenser Model.</inlineHelpText>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2000</fullName>
            </value>
            <value>
                <fullName>7000</fullName>
            </value>
            <value>
                <fullName>8000</fullName>
            </value>
            <value>
                <fullName>9000</fullName>
            </value>
            <value>
                <fullName>3100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>