force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Modem_ESN__c.field-meta.xml
<CustomField>
    <fullName>FS_Modem_ESN__c</fullName>
    <label>Modem ESN</label>
    <length>30</length>
    <type>Text</type>
</CustomField>