force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Modem_ESN_Ext__c.field-meta.xml
<CustomField>
    <fullName>FS_Modem_ESN_Ext__c</fullName>
    <label>Modem ESN</label>
    <length>25</length>
    <type>Text</type>
</CustomField>