force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Modem_Info_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Modem_Info_Date__c</fullName>
    <label>Modem Info Date</label>
    <type>Date</type>
</CustomField>