force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Modem_Last_Avg_Signal__c.field-meta.xml
<CustomField>
    <fullName>FS_Modem_Last_Avg_Signal__c</fullName>
    <description>Latest Modem Strength Observed Over 30 Days. Rolling average, calculated by Redshift.</description>
    <label>Modem Last Signal</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>