force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Name1__c.field-meta.xml
<CustomField>
    <fullName>FS_Name1__c</fullName>
    <description>Outlet Name</description>
    <formula>FS_Outlet__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>NAME1</inlineHelpText>
    <label>Outlet Name</label>
    <type>Text</type>
</CustomField>