force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Next_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_Next_Status__c</fullName>
    <label>Next Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>