force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Next_Status_Descr__c.field-meta.xml
<CustomField>
    <fullName>FS_Next_Status_Descr__c</fullName>
    <description>Description of Next Status</description>
    <label>Next Status Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>