force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_NMS_Response__c.field-meta.xml
<CustomField>
    <fullName>FS_NMS_Response__c</fullName>
    <description>Response received from NMS/Airwatch for the last update</description>
    <inlineHelpText>Response received from NMS/Airwatch for the last update</inlineHelpText>
    <label>AW Response</label>
    <type>TextArea</type>
</CustomField>