force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_of_days_data_posted__c.field-meta.xml
<CustomField>
    <fullName>FS_of_days_data_posted__c</fullName>
    <label># of Days Data Posted</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>