force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_of_Previous_Days_Called_Home__c.field-meta.xml
<CustomField>
    <fullName>FS_of_Previous_Days_Called_Home__c</fullName>
    <label># of Previous Days Called Home</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>