force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_Order_Type__c</fullName>
    <description>To hold the Order Type of OD from JDE</description>
    <label>Document Type</label>
    <length>2</length>
    <type>Text</type>
</CustomField>