force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Order_Type_Descr__c.field-meta.xml
<CustomField>
    <fullName>FS_Order_Type_Descr__c</fullName>
    <description>Description of JDE Order Type of OD</description>
    <label>Document Type Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>