force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_ORT01__c.field-meta.xml
<CustomField>
    <fullName>FS_ORT01__c</fullName>
    <description>City</description>
    <formula>FS_Outlet__r.ShippingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ORT01</inlineHelpText>
    <label>City</label>
    <type>Text</type>
</CustomField>