force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Other_PIA_Installation__c.field-meta.xml
<CustomField>
    <fullName>FS_Other_PIA_Installation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RO4W/Removal/Replacement Transaction</label>
    <referenceTo>FS_Installation__c</referenceTo>
    <relationshipLabel>Outlet Dispensers (Other PIA Installation)</relationshipLabel>
    <relationshipName>Outlet_Dispensers2</relationshipName>
    <type>Lookup</type>
</CustomField>