force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Outlet__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet__c</fullName>
    <description>Outlet field.</description>
    <label>Outlet</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 3) OR (2 AND 4 AND (5 OR 7)) OR (2 AND 4 AND 6)</booleanFilter>
        <errorMessage>Value does not exist or does not match filter criteria for Outlet.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>FS Outlet</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>BoE Outlet</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>7000, 8000, 9000, CCNA Dispenser</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>BoE Dispenser</value>
        </filterItems>
        <filterItems>
            <field>Account.FS_Is_Address_Validated__c</field>
            <operation>equals</operation>
            <value>No, Yes</value>
        </filterItems>
        <filterItems>
            <field>Account.Is_Default_FET_International_Outlet__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Account.FS_Is_Address_Validated__c</field>
            <operation>equals</operation>
            <value/>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Outlet Dispensers</relationshipLabel>
    <relationshipName>Outlet_Dispensers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>