force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Outlet_County__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_County__c</fullName>
    <description>Outlet County as defined by Device Management System</description>
    <label>Outlet County</label>
    <length>64</length>
    <type>Text</type>
</CustomField>