force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Outlet_Information__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_Information__c</fullName>
    <description>outlet information</description>
    <formula>FS_Outlet__r.FS_Outlet_Information__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outlet Information</label>
    <type>Text</type>
</CustomField>