force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Outlet_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_Phone_Number__c</fullName>
    <description>Outlet Phone Number</description>
    <formula>FS_Outlet__r.Phone</formula>
    <label>Outlet Phone Number</label>
    <type>Text</type>
</CustomField>