force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Pending_Migration_to_AW__c.field-meta.xml
<CustomField>
    <fullName>FS_Pending_Migration_to_AW__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Migration to AW</label>
    <type>Checkbox</type>
</CustomField>