force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Planned_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Planned_Install_Date__c</fullName>
    <inlineHelpText>Enter the date format in mm/dd/yyyy</inlineHelpText>
    <label>FET Scheduled Install Date</label>
    <type>Date</type>
</CustomField>