force-app/main/default/objects/FS_Outlet_Dispenser__c/fields/FS_Post_Installation_Activity__c.field-meta.xml
<CustomField>
    <fullName>FS_Post_Installation_Activity__c</fullName>
    <formula>TEXT(Installation__r.FS_Execution_Plan__r.FS_Post_Installation_Activity__c)</formula>
    <label>Post Installation Activity</label>
    <type>Text</type>
</CustomField>